docs: 添加 Release 下载和源码构建两种启动方式